--- a/MasterVillageLibraryTests/MasterVillageLibraryTests.csproj
+++ b/MasterVillageLibraryTests/MasterVillageLibraryTests.csproj
@@ -56,6 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Entities\VillagerTests.cs" />
     <Compile Include="Logic\WorldTimeTests.cs" />
     <Compile Include="Models\VillagerInformationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
